# mode_template

./: .travis.yml  CMakeLists.txt  build.sh  main.cpp  readme.md  test.sh
include/: mode.h
lib/: CMakeLists.txt
tests/: mode_tests.cpp
